style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* // reusable Classes // */
.text-weight-300 {
  font-weight: 300;
}

.text-weight-400 {
  font-weight: 400;
}

.text-weight-600 {
  font-weight: 600;
}

.color-desaturated-red {
  color: hsl(0, 36%, 70%);
}

.color-soft-red {
  color: hsl(0, 93%, 68%);
  background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
}

.color-dark-grayish-red {
  color: hsl(0, 6%, 24%);
}

.hidden {
  display: none;
}

.incorrect-input {
  border: 1px solid red;
}

.correct-input {
  background-color: #32de84;
  animation: fadebackground 1s;
}

@keyframes fadebackground {
  from {
    background-color: #fff;
  }
  to {
    background-color: #32de84;
  }
}

/* --- regular styling begins --- */

body {
  width: 100vw;
  height: 100vh;
  background: url("/Base-Apparel/images/bg-pattern-desktop.svg");
}

.container {
  width: 100%;
  height: 100%;
  display: flex;
  /* justify-content: space-between; */
  flex-wrap: wrap;
  flex-direction: column;
  font-family: "Josefin Sans", sans-serif;
}

.logo {
  width: 60%;
  height: 10%;

  display: flex;
  align-items: end;
}

.logo-img {
  padding-left: 20%;
}

.hero-image {
  background: url("/Base-Apparel/images/hero-desktop.jpg");
  background-size: cover;
  background-position: center;
  width: 40%;
  height: 100%;
}

button:hover {
  background: hsl(0, 80%, 86%);
}

/* // ----- styling for 768px and above ----- // */
@media screen and (min-width: 768px) {
  .main-text {
    width: 60%;
    padding-top: 8rem;
  }

  .header {
    width: 50%;
    font-size: 5em;
    margin-left: 20%;
    line-height: 1.25em;
    letter-spacing: 1.25rem;
  }

  .greeting-text {
    margin-left: 20%;
    margin-right: 35%;
    line-height: 1.75em;
    padding-top: 20px;
  }

  .input-email {
    display: flex;
    padding-top: 50px;
  }

  input[type="text"] {
    width: 50%;
    height: 3rem;
    border-radius: 25px;
    margin-left: 20%;
    outline: none;
    border: 1px solid hsl(0, 36%, 70%);
  }

  input[placeholder] {
    padding-left: 2rem;
    font-size: 1.25rem;
    font-family: "Josefin Sans", sans-serif;
  }

  button {
    width: 5rem;
    border-radius: 25px;
    margin-left: -3rem;
    outline: none;
    border: none;
    background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
  }

  button:hover {
    background: hsl(0, 80%, 86%);
  }

  .active-text {
    margin-left: 15%;
    padding-top: 10px;
  }

  .error-icon {
    vertical-align: middle;
    margin-bottom: 5px;
  }
}

/* // ----- tablet ----- // */

@media only screen and (width: 768px) {
  .logo-img {
    padding-left: 5%;
  }

  .header {
    margin-left: 5%;
    font-size: 4.5rem;
  }

  .greeting-text {
    margin-left: 5%;
  }

  .input-email {
    margin-left: 5%;
    display: flex;
    justify-content: flex-start;
  }

  input[type="text"] {
    margin-left: 0;
    width: 70%;
  }

  button:hover {
    background: hsl(0, 80%, 86%);
  }

  .active-text {
    margin-left: 7.5%;
    padding-top: 10px;
  }

  .error-icon {
    vertical-align: middle;
    margin-bottom: 5px;
  }
}

/* // ----- mobile phone styling ----- // */
@media screen and (max-width: 767px) {
  .container {
    flex-direction: column;
  }

  .logo {
    width: 100%;
  }

  .logo-img {
    padding-left: 5%;
    padding-bottom: 5%;
    width: 9rem;
  }

  .hero-image {
    background: url("/Base-Apparel/images/hero-mobile.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    /* background-position: center; */
    width: 100%;
    height: 30%;
  }

  .main-text {
    order: 3;
    font-size: 1.5rem;
    text-align: center;
    padding-top: 50px;
    width: 100%;
  }

  .header {
    letter-spacing: 0.5rem;
  }

  .greeting-text {
    margin-top: 20px;
    font-size: 1rem;
    padding: 0 25px;
    line-height: 1.25rem;
  }

  .input-email {
    order: 4;
    padding-top: 20px;
    display: flex;
    justify-content: center;
  }

  input[type="text"] {
    width: 80%;
    border-radius: 25px;
    height: 3rem;
    border: 1px solid hsl(0, 93%, 68%);
    outline: none;
    font-size: 1rem;
  }

  input[placeholder] {
    padding-left: 20px;
    font-family: "Josefin Sans", sans-serif;
    color: hsl(0, 36%, 70%);
  }

  button {
    width: 4rem;
    border-radius: 25px;
    margin-left: -3rem;
    background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
    border: none;
  }

  button:hover {
    background: hsl(0, 80%, 86%);
  }

  .active-text {
    order: 6;
    display: flex;
    justify-content: center;
    padding-top: 10px;
  }

  .error-icon {
    vertical-align: middle;
    margin-bottom: 5px;
  }
}

